--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -18,7 +18,7 @@ My background is a bit different than most tech folks—I spent several summers 
 I'm often putting projects together with the following technologies:
 
 - AI development with Python, Keras, and Transformers
-- Containerization with and Podman 
+- Containerization with Podman 
 - Responsive search using Elasticsearch
 - Data processing and cleaning with Pandas
 - Streamlit for rapid prototyping and demos
