--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,26 +3,29 @@ layout: '../layouts/MainLayout.astro'
 title: "Your Site Title"
 description: "Your site description"
 ---
+  
 
 ## Hey there! 👋
+  
+I'm Alex, a software developer focused on applied AI and automation. By day, I build practical solutions that make complex systems work smarter in real-world environments. By night (and many weekends), I'm a swim coach helping kids get faster in the water and become better people out of it.
 
-I'm Alex, a software developer focused on applied AI and automation. By day, I build practical, intelligent solutions that make complex systems work smarter in real-world environments. By night (and many weekends), I'm a swim coach helping kids achieve their goals.
+### What I'm About  
 
-### What I'm About
-
-I love getting AI to work in the real-world. My focus is on practical implementation - taking AI concepts and turning them into working solutions that solve actual business problems. Whether it's computer vision, the latest language model, or a proof of concept, I enjoy creating solutions that solve actual problems people face.
+I love getting AI to work in the real-world. I've created solutions that use computer vision systems for package processing, generative AI for training data creation, language models for unstructured text analysis, and data visualization dashboards. I focus on delivering tangible results that address real business challenges rather than theoretical possibilities.
 
 My background is a bit different than most tech folks—I spent several summers working on manufacturing production lines during college (making candy wrappers and dock bumpers), which gave me a unique perspective on industrial challenges. I've also spent time as an Aquatics Director and Head Coach, managing volunteers, staff, and children; all while never losing sight of the mission.
 
 ### My Technical Side
+
 I'm often putting projects together with the following technologies:
 
 - AI development with Python, Keras, and Transformers
-- Containerization with Podman 
+- Containerization with Podman
 - Responsive search using Elasticsearch
 - Data processing and cleaning with Pandas
-- Streamlit for rapid prototyping and demos
-- Proxmox and Tailscale for homelab infrastructure
+- Linux for both homelab, AI training environments, and daily driver OS
+- Streamlit for rapid prototyping, demos, and data visualization
+- Proxmox, Podman, and Tailscale for homelab infrastructure
 
 ### Beyond The Code
 
@@ -30,7 +33,7 @@ My time as a swim coach and Aquatics Director shaped me in ways that technical w
 
 Meanwhile, constantly testing new technology through my homelab and side projects has made me adaptable and resourceful - skills that translate well to solving unexpected problems in production environments.
 
-When I'm not coding or coaching, you'll find me tinkering with my homelab setup, experimenting with new technologies, or enjoying the outdoors around Seattle.
+When I'm not coding or coaching, you'll find me tinkering with my homelab setup, experimenting with new technologies, or enjoying the outdoors around Seattle.  
 
 I believe in building things that matter, working closely with people to understand their needs, and creating solutions that are both elegant and practical.
 
