move text to pages

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -15,26 +15,8 @@ I love getting AI to work in the real-world. I've created solutions that use com
 
 My background is a bit different than most tech folks—I spent several summers working on manufacturing production lines during college (making candy wrappers and dock bumpers), which gave me a unique perspective on industrial challenges. I've also spent time as an Aquatics Director and Head Coach, managing volunteers, staff, and children; all while never losing sight of the mission.
 
-### My Technical Side
+### What you'll find on my blog
 
-I'm often putting projects together with the following technologies:
-
-- AI development with Python, Keras, and Transformers
-- Containerization with Podman
-- Responsive search using Elasticsearch
-- Data processing and cleaning with Pandas
-- Linux for both homelab, AI training environments, and daily driver OS
-- Streamlit for rapid prototyping, demos, and data visualization
-- Proxmox, Podman, and Tailscale for homelab infrastructure
-
-### Beyond The Code
-
-My time as a swim coach and Aquatics Director shaped me in ways that technical work alone couldn't. I learned to break down complex skills into teachable components, adapt instruction for different learning styles, and give feedback that motivates rather than discourages. Managing aquatics operations taught me how to prioritize safety while balancing competing needs, coordinate logistics for large events, and make quick decisions when unexpected situations arise. Most importantly, I developed patience and empathy that help me understand what users and teammates actually need, not just what they initially ask for.
-
-Meanwhile, constantly testing new technology through my homelab and side projects has made me adaptable and resourceful - skills that translate well to solving unexpected problems in production environments.
-
-When I'm not coding or coaching, you'll find me tinkering with my homelab setup, experimenting with new technologies, or enjoying the outdoors around Seattle.  
-
-I believe in building things that matter, working closely with people to understand their needs, and creating solutions that are both elegant and practical.
+It's new! Not much to find yet. Some posts about projects I'm working on, little problems I've solved, and swimming coaching thoughts should all be coming.
 
 Want to chat about tech, swimming, or anything in between? [Drop me a line](/contact).
